finishes with solicitudes

--- a/app/views/inicio/index.html.erb
+++ b/app/views/inicio/index.html.erb
@@ -48,7 +48,7 @@
      </div>
      <% end %>
    </div>
-      <div class="col-md-3 col-xs-6">
+   <div class="col-md-3 col-xs-6">
      <%= link_to proyectos_path do %>     
      <div class="button">
        <i class="fa fa-book fa-5x"></i><br>
@@ -56,5 +56,15 @@
      </div>
      <% end %>
    </div>
+</div>
 
+<div class="row">
+  <div class="col-md-3 col-xs-6">
+    <%= link_to solicituds_path do %>     
+    <div class="button-blue">
+      <i class="fa fa-paper-plane fa-5x"></i><br>
+	    Solicitudes    
+    </div>
+    <% end %>
+  </div>
 </div>
