--- a/app/views/solicituds/show.html.erb
+++ b/app/views/solicituds/show.html.erb
@@ -40,5 +40,6 @@
   <%= @solicitud.categoria %>
 </p>
 
+<%= link_to "Pdf", solicitud_path(@solicitud, :format => "pdf") %> |
 <%= link_to 'Edit', edit_solicitud_path(@solicitud) %> |
 <%= link_to 'Back', solicituds_path %>
