--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -35,6 +35,18 @@ a:hover {
   margin: 15px;
 }
 
+.button-blue {
+  text-align: center;
+  background-color: #1100bb;
+  border: 1px;
+  border-radius: 5px;	
+  padding: 15px;
+  color:white;
+  margin: 15px;
+}
+
+
+
 .button2 {
   background-color: #e30613;
   border-radius: 5px;	
