--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,9 +22,14 @@
     <% end %>
     <%= yield %>
   </div>
+  <%= debug(params) if Rails.env.development? %>
   <div class="spacefooter">
   </div>
+  
+ 
+
   <%= render 'layouts/footer' %>
 
+  
 </body>
 </html>
