--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,26 +13,26 @@
       </div>
       
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <!--
-        <ul class="nav navbar-nav navbar-right">
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown">Algo <span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Algo</a></li>
-              <li><a href="#">Otro algo</a></li>
-              <li><a href="#">Otro otro algo</a></li>
-              <li class="divider"></li>
-              <li><a href="#">algo separado</a></li>
-            </ul>
-          </li>
-        </ul>
-        <form class="navbar-form navbar-right" role="search">
-          <div class="form-group">
-            <input type="text" class="form-control" placeholder="Descripción">
-          </div>
-          <button type="submit" class="btn btn-default">Buscar</button>
-        </form>
-        -->
+        <% if signed_in? %>
+          <ul class="nav navbar-nav navbar-right">  
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">
+                <%= usuario_actual.nombre %>
+                <span class="caret"></span>
+              </a>
+              <ul class="dropdown-menu" role="menu">
+                <li><%= link_to "Perfil", usuario_actual %></li>
+                <li><%= link_to "Configuración", '#' %></li>
+                <li><%= link_to "Usuarios", '#' %></li>
+                <li class="divider"></li>
+                <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
+              </ul>
+            </li>
+          </ul>
+        <% else %>
+          BBB
+        <% end %>
+
         <%= form_tag(fichas_path, method:'get', class: "navbar-form navbar-right", id:"search_fichas") do %>
           <div class="form-group">
             <%= text_field_tag :search_fichas, value=nil, class:"form-control", placeholder: "Buscar fichas" %>
@@ -41,7 +41,9 @@
 	          <i class="fa fa-search"></i>
 	        </button>
         <% end %>
-       
+        
+          
+
         
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
