--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -13,8 +13,9 @@
       </div>
       
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <% if signed_in? %>
+
           <ul class="nav navbar-nav navbar-right">  
+            <% if signed_in? %>
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">
                 <%= usuario_actual.nombre %>
@@ -25,15 +26,17 @@
                 <li><%= link_to "Configuración", '#' %></li>
                 <li><%= link_to "Usuarios", '#' %></li>
                 <li class="divider"></li>
-                <li><%= link_to "Sign out", signout_path, method: "delete" %></li>
+                <li><%= link_to "Cerrar sessión", signout_path, method: "delete" %></li>
               </ul>
             </li>
+            <% else %>
+            <li>
+              <%= link_to "Accede", signin_path %>
+            </li>
+            <% end %>
           </ul>
-        <% else %>
-          BBB
-        <% end %>
 
-        <%= form_tag(fichas_path, method:'get', class: "navbar-form navbar-right", id:"search_fichas") do %>
+          <%= form_tag(fichas_path, method:'get', class: "navbar-form navbar-right", id:"search_fichas") do %>
           <div class="form-group">
             <%= text_field_tag :search_fichas, value=nil, class:"form-control", placeholder: "Buscar fichas" %>
           </div>
@@ -41,9 +44,6 @@
 	          <i class="fa fa-search"></i>
 	        </button>
         <% end %>
-        
-          
-
         
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
