--- a/app/views/ficha_proveedors/index.html.erb
+++ b/app/views/ficha_proveedors/index.html.erb
@@ -1,8 +1,8 @@
-<h1>Listing ficha_proveedors</h1>
+<h1>Fichas de proveedores</h1>
 
 
-<%= render 'ficha_proveedors/table' %>
+<%= render 'table' %>
 
 <br>
 
-<%= link_to 'New Ficha proveedor', new_ficha_proveedor_path %>
+<%= link_to 'Nueva ficha de proveedor', new_ficha_proveedor_path %>
