--- a/app/views/ficha_proveedors/_table.html.erb
+++ b/app/views/ficha_proveedors/_table.html.erb
@@ -6,7 +6,7 @@
       <th>Proveedor</th>
       <th>Precio</th>
       <th>Ficha</th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -18,9 +18,17 @@
         <td><%= ficha_proveedor.proveedor %></td>
         <td><%= ficha_proveedor.precio %></td>
         <td><%= ficha_proveedor.ficha %></td>
-        <td><%= link_to 'Show', ficha_proveedor %></td>
-        <td><%= link_to 'Edit', edit_ficha_proveedor_path(ficha_proveedor) %></td>
-        <td><%= link_to 'Destroy', ficha_proveedor, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+          <%= link_to ficha_proveedor do %>
+          <i class="fa fa-eye"></i>
+          <% end %>
+          <%= link_to edit_ficha_proveedor_path(ficha_proveedor) do %>
+          <i class="fa fa-pencil-square-o"></i>
+          <% end %>
+          <%= link_to ficha_proveedor, method: :delete, data: { confirm: '¿Seguro?' } do %>
+          <i class="fa fa-trash"></i>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
