--- a/app/views/proyectos/_table.html.erb
+++ b/app/views/proyectos/_table.html.erb
@@ -1,8 +1,8 @@
-<table>
+<table class="table table-condensed">
   <thead>
     <tr>
       <th>Nombre</th>
-      <th colspan="3"></th>
+      <th></th>
     </tr>
   </thead>
 
@@ -10,9 +10,17 @@
     <% @proyectos.each do |proyecto| %>
       <tr>
         <td><%= proyecto.nombre %></td>
-        <td><%= link_to 'Show', proyecto %></td>
-        <td><%= link_to 'Edit', edit_proyecto_path(proyecto) %></td>
-        <td><%= link_to 'Destroy', proyecto, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+                <td>
+          <%= link_to proyecto do %>
+          <i class="fa fa-eye"></i>
+          <% end %>
+          <%= link_to edit_proyecto_path(proyecto) do %>
+          <i class="fa fa-pencil-square-o"></i>
+          <% end %>
+          <%= link_to proyecto, method: :delete, data: { confirm: '¿Seguro?' } do %>
+          <i class="fa fa-trash"></i>
+          <% end %>
+        </td>
       </tr>
     <% end %>
   </tbody>
