--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -7,12 +7,24 @@ $grayMediumLight: #eaeaea;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
-
-
 /*body */
 
 body { 
- 
+  padding-bottom: 100px;      
+  padding-top: 100px;              
+}
+
+.jumbotron {
+  margin-bottom: 0px;
+  height: 90%;
+  color: white;
+  text-shadow: black 0.3em 0.3em 0.3em;
+  background:transparent;
+  background: image-url('sagasta.jpg') no-repeat center center; 
+  -webkit-background-size: 100% 100%;
+  -moz-background-size: 100% 100%;
+  -o-background-size: 100% 100%;
+  background-size: 100% 100%;
 }
 
 .panel-heading {
@@ -20,10 +32,11 @@ body {
     background-color: #f9d616 !important;
     border-color: #ddd;
 }
+
 /* header */
 
 .navbar {
-  background-color: #fff; /* background color will be black for all browsers */
+  background-color: #fff; 
   background-image: none;
   background-repeat: no-repeat;
   filter: none;
@@ -40,7 +53,7 @@ a:hover {
   border: 1px;
   border-radius: 5px;	
   padding: 15px;
-  color:white;
+  color:white !important;
   margin: 15px;
 }
 
@@ -64,10 +77,9 @@ a:hover {
 }
 
 
-.spacefooter {
-  height: 1.5cm;
+.space {
+  height: 100px;
 }
-/* footer */
 
 
 
@@ -77,6 +89,6 @@ a:hover {
   clear: both;
   float: left;
   width: 100%;
-  margin-top: 45px;
+  margin-bottom: 100px;
   @include box_sizing;
 }
