--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -23,7 +23,7 @@
               </a>
               <ul class="dropdown-menu" role="menu">
                 <li><%= link_to "Perfil", usuario_actual %></li>
-                <li><%= link_to "Actualizar", '#' %></li>
+                <li><%= link_to "Actualizar", edit_usuario_path(usuario_actual) %></li>
                 <li><%= link_to "Usuarios", '#' %></li>
                 <li class="divider"></li>
                 <li><%= link_to "Cerrar sessión", signout_path, method: "delete" %></li>
