--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,21 +12,26 @@
 <body>
 
   <%= render 'layouts/header' %>
-  <div class="spacefooter">
-  </div>
   <div class="container contents">
     <% if notice %>
     <div id="notice"  class="alert alert-warning" role="alert">
       <%= notice %>
     </div>
-     <% end %>
-   
+    <% end %>    
+  </div>
+
+  <% if controller_name == 'inicio' %>
     <%= yield %>
-  </div>
-  <%= debug(params) if Rails.env.development? %>
-  <div class="spacefooter">
-  </div>
+  <% else %>
+    <div class="container contents">
+      <%= yield %>
+    </div>
+  <% end %>
+
   
+  
+
+  <%= debug(params) if Rails.env.development? %>
  
 
   <%= render 'layouts/footer' %>
