adds few new icons

--- a/app/views/inicio/_desktop.html.erb
+++ b/app/views/inicio/_desktop.html.erb
@@ -56,6 +56,15 @@
      </div>
      <% end %>
    </div>
+   <div class="col-md-3 col-xs-6">
+     <%= link_to proveedors_path do %>     
+     <div class="button">
+       <i class="fa fa-truck fa-5x"></i><br>
+	     Prveedores
+     </div>
+     <% end %>
+   </div>
+
 </div>
 
 <div class="row">
