removes :fecha from solicitud fecha

--- a/app/views/solicituds/index.html.erb
+++ b/app/views/solicituds/index.html.erb
@@ -4,10 +4,10 @@
   <%= render 'table' %>
   <div class="col-sm-2 col-xs-4">
     <%= link_to new_solicitud_path do %>
-    <div class="button">
+    <button class="button">
       <i class="fa fa-file-text-o"></i><br>
-      Nueva Solicitud
-    </div>
+      Nueva solicitud
+    </button>
     <% end %>
   </div>
 </div>
