--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <%= link_to "Almacen", root_path, class:"navbar-brand", title:"Inicio" %>
+        <%= link_to "ApPM", root_path, class:"navbar-brand", title:"Inicio" %>
       </div>
       
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -38,7 +38,7 @@
                 <li><%= link_to "Actualizar", edit_usuario_path(usuario_actual) %></li>
                 <li><%= link_to "Usuarios", '#' %></li>
                 <li class="divider"></li>
-                <li><%= link_to "Cerrar sessión", signout_path, method: "delete" %></li>
+                <li><%= link_to "Cerrar sesión", signout_path, method: "delete" %></li>
               </ul>
             </li>
             <% else %>
