--- a/app/views/materials/_form.html.erb
+++ b/app/views/materials/_form.html.erb
@@ -21,6 +21,6 @@
     <%= f.select :ubicacion_id, Ubicacion.all.collect {|u| [ u.to_s, u.id ] } %>
   </div>
   <div class="actions">
-    <%= f.submit %>
+    <%= f.submit "Guardar" %>
   </div>
 <% end %>
