adds fichas.csv

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -11,7 +11,7 @@ $grayMediumLight: #eaeaea;
 
 body { 
   padding-bottom: 100px;      
-  padding-top: 100px;              
+  padding-top: 50px;              
 }
 
 .jumbotron {
@@ -73,6 +73,10 @@ body {
   color:white;
 }
 
+
+.mybtn {
+  color: red;     
+}
 
 .space {
   height: 100px;
