--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -1,6 +1,7 @@
 @import "bootstrap";
 
 $grayMediumLight: #eaeaea;
+$saemaRed: #e30613;
 
 @mixin box_sizing {
   -moz-box-sizing: border-box;
@@ -11,8 +12,16 @@ $grayMediumLight: #eaeaea;
 
 body { 
   padding-bottom: 100px;      
-  padding-top: 50px;              
+  padding-top: 70px;              
 }
+
+a {
+  color: #111;
+  
+}
+a:hover, a:focus {
+  text-decoration: none;
+} 
 
 .jumbotron {
   margin-bottom: 0px;
@@ -75,7 +84,11 @@ body {
 
 
 .mybtn {
-  color: red;     
+  color: $saemaRed !important;
+  background-color: white;
+  :hover {
+    background-color: transparent !important;
+  }     
 }
 
 .space {
