--- a/app/views/fichas/index.html.erb
+++ b/app/views/fichas/index.html.erb
@@ -2,6 +2,11 @@
   <div class="col-sm-10">
     <h1>Fichas</h1>
   </div>
+  <div class="col-sm-2">
+    <%= link_to fichas_path(format: "csv"), class:"mybtn" do %>
+      <i class="fa fa-file-excel-o  fa-3x"></i>
+    <% end %>
+  </div>
 </div>
 
 <div class="row">
