--- a/app/views/inicio/_desktop.html.erb
+++ b/app/views/inicio/_desktop.html.erb
@@ -16,31 +16,14 @@
     <% end %>
   </div>
   <div class="col-md-3 col-xs-6">
-     <%= link_to negocio_unidads_path do %>     
-     <div class="button">
-       <i class="fa fa-archive fa-5x"></i><br>
-       Unidades de negocio
-     </div>
-     <% end %>
+    <%= link_to categorias_path do %>     
+    <div class="button">
+      <i class="fa fa-cubes fa-5x"></i><br>
+	    Categorias
+    </div>
+    <% end %>
   </div>
-  
   <div class="col-md-3 col-xs-6">
-     <%= link_to familias_path do %>     
-     <div class="button">
-       <i class="fa fa-cube fa-5x"></i><br>
-       Familias
-     </div>
-     <% end %>
-   </div>
-   <div class="col-md-3 col-xs-6">
-     <%= link_to subfamilias_path do %>     
-     <div class="button">
-       <i class="fa fa-cubes fa-5x"></i><br>
-	     Subfamilias
-     </div>
-     <% end %>
-   </div>
-   <div class="col-md-3 col-xs-6">
      <%= link_to ficha_proveedors_path do %>     
      <div class="button">
        <i class="fa fa-file-text-o fa-5x"></i><br>
