--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -17,11 +17,33 @@ body {
 
 a {
   color: #111;
-  
 }
 a:hover, a:focus {
   text-decoration: none;
 } 
+
+@mixin mybtnMix {
+  background-color: transparent; 
+  border-style: solid;
+  color: $saemaRed;
+  border-color: $saemaRed;
+  :first-child { 
+    margin: 10px;
+  }
+  
+}
+
+.mybtn {
+  @include mybtnMix;
+}
+
+.mybtn-white {
+  @include mybtnMix;
+  color: white;
+  border-color: white;
+}
+
+
 
 .jumbotron {
   margin-bottom: 0px;
@@ -83,13 +105,6 @@ a:hover, a:focus {
 }
 
 
-.mybtn {
-  color: $saemaRed !important;
-  background-color: white;
-  :hover {
-    background-color: transparent !important;
-  }     
-}
 
 .space {
   height: 100px;
